<resources>
    <string name="app_name">TaCoTel</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="tacotel">TaCoTel</string>
    <string name="tacotel_fontFamily">serif</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="pseudo">Pseudo</string>
    <string name="pas_inscrit">Pas encore inscrit? Cliquez ici!</string>
    <string name="valider">Valider</string>
    <string name="connexion_admin">Se connecter en tant qu\'Admin</string>
    <string name="admin">Admin</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="email">E-mail</string>
    <string name="annuler">Annuler</string>
    <string name="article">Article</string>
    <string name="articles">Articles</string>
    <string name="menu">Menu</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="panier">Panier</string>
    <string name="paiement">Paiement</string>
    <string name="magasin">Magasin</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="select_categorie">Sélectionnez une catégorie:</string>
    <string name="rechercher">Rechercher</string>
    <string name="details">Détails</string>
    <string name="marginStart_details">Taille de l\'écran:</string>
    <string name="retour">Retour</string>
    <string name="adresse_livraison">Adresse de livraison</string>
    <string name="rue">Nom de la rue</string>
    <string name="numero">Numéro de la rue</string>
    <string name="code_postal">Code postal</string>
    <string name="ville">Ville</string>
    <string name="pays">Pays</string>
    <string name="adresse_facturation">Adresse de facturation</string>
    <string name="paiement_1_3">Paiement 1/3</string>
    <string name="paiement_2_3">Paiement 2/3</string>
    <string name="mode_paiement">Mode de paiement</string>
    <string name="titulaire_compte">Titulaire du compte</string>
    <string name="numero_compte">Numéro de compte</string>
    <string name="cvv">CVV</string>
    <string name="informations_bancaires">Informations bancaires</string>
    <string name="paiement_3_3">Paiement 3/3</string>
    <string name="recap_panier">Récapitulatif du panier</string>
    <string name="total_payer">Total à payer</string>
    <string name="sous_total">Sous-total</string>
    <string name="tva">TVA</string>
    <string name="total_ttc">Total TTC</string>
    <string name="ajout_modification_article">Ajout article</string>
    <string name="liste_articles">Liste des articles</string>
    <string name="se_connecter_client">Se connecter en tant que client</string>
    <string name="libelle">Libellé</string>
    <string name="description">Description</string>
    <string name="prix">Prix</string>
    <string name="stock">Quantité en stock</string>
    <string name="taille_ecran">Taille de l\'écran</string>
    <string name="marque">Marque</string>
    <string name="couleur">Couleur</string>
    <string name="taille_memoire">Taille de la mémoire</string>
    <string name="ajouter">Ajouter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>