<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_deconnexion"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="151dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@color/color_grey"
        android:text="@string/deconnexion"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_paiement" />

    <Button
        android:id="@+id/btn_paiement"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="151dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@color/color_blue_info"
        android:onClick="goToPaiement"
        android:text="@string/paiement"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_panier" />

    <Button
        android:id="@+id/btn_magasin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="151dp"
        android:layout_height="46dp"
        android:layout_marginTop="60dp"
        android:background="@color/color_blue_info"
        android:onClick="goToMagasin"
        android:text="@string/magasin"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nom_menu" />

    <TextView
        android:id="@+id/tv_tacotel_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginTopStart_tacotel"
        android:layout_marginTop="@dimen/marginTopStart_tacotel"
        android:fontFamily="@string/tacotel_fontFamily"
        android:text="@string/tacotel"
        android:textSize="@dimen/label_tacotel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopStart_tacotel"
        android:layout_marginEnd="@dimen/marginTopStart_tacotel"
        android:text="@string/menu"
        android:textSize="@dimen/label_tacotel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider_menu"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/divider_marginTop"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_bienvenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/bienvenue"
        android:textSize="@dimen/size_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_menu" />

    <TextView
        android:id="@+id/tv_nom_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Prénom NOM!"
        android:textSize="@dimen/size_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bienvenue" />

    <Button
        android:id="@+id/btn_panier"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="151dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@color/color_blue_info"
        android:onClick="goToPanier"
        android:text="@string/panier"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_magasin" />
</androidx.constraintlayout.widget.ConstraintLayout>