<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_tacotel_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginTopStart_tacotel"
        android:layout_marginTop="@dimen/marginTopStart_tacotel"
        android:fontFamily="@string/tacotel_fontFamily"
        android:text="@string/tacotel"
        android:textSize="@dimen/label_tacotel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopStart_tacotel"
        android:layout_marginEnd="@dimen/marginTopStart_tacotel"
        android:text="@string/connexion"
        android:textSize="@dimen/label_tacotel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider_connexion"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/divider_marginTop"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_pseudo_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_connexion"
        android:layout_marginTop="76dp"
        android:text="@string/pseudo"
        android:textSize="@dimen/label_textSize_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_connexion" />

    <EditText
        android:id="@+id/et_pseudo_connexion"
        android:layout_width="@dimen/et_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_connexion"
        android:layout_marginTop="@dimen/marginTop_editText"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pseudo_connexion" />

    <TextView
        android:id="@+id/tv_mdp_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_connexion"
        android:layout_marginTop="@dimen/marginTop_label"
        android:text="@string/mot_de_passe"
        android:textSize="@dimen/label_textSize_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pseudo_connexion" />

    <EditText
        android:id="@+id/et_mdp_connexion"
        android:layout_width="@dimen/et_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_connexion"
        android:layout_marginTop="@dimen/marginTop_editText"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mdp_connexion" />

    <TextView
        android:id="@+id/tv_pas_inscrit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="goToFormInscription2"
        android:text="@string/pas_inscrit"
        android:textColor="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_valider_connexion" />

    <Button
        android:id="@+id/btn_valider_connexion"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@color/color_blue_info"
        android:onClick="goToMenu"
        android:text="@string/valider"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mdp_connexion" />

    <TextView
        android:id="@+id/tv_connexion_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="goToFormConnexionAdmin"
        android:text="@string/connexion_admin"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pas_inscrit" />

</androidx.constraintlayout.widget.ConstraintLayout>