<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_tacotel_banque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginTopStart_tacotel"
        android:layout_marginTop="@dimen/marginTopStart_tacotel"
        android:fontFamily="@string/tacotel_fontFamily"
        android:text="@string/tacotel"
        android:textSize="@dimen/label_tacotel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/img_home_banque"
        android:layout_width="40dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:onClick="goToMenuFromPaiementBanque"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

    <TextView
        android:id="@+id/tv_banque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopStart_tacotel"
        android:layout_marginEnd="@dimen/marginTopStart_tacotel"
        android:text="@string/paiement_2_3"
        android:textSize="@dimen/label_tacotel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider_banque"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/divider_marginTop"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_modes_paiement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_details"
        android:layout_marginTop="24dp"
        android:text="@string/mode_paiement"
        android:textSize="@dimen/label_textSize_form"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_banque" />

    <Switch
        android:id="@+id/switch_debit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_details"
        android:layout_marginTop="16dp"
        android:text="carte de débit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_modes_paiement" />

    <Switch
        android:id="@+id/switch_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_details"
        android:layout_marginTop="16dp"
        android:text="carte de crédit"
        app:layout_constraintStart_toEndOf="@+id/switch_debit"
        app:layout_constraintTop_toBottomOf="@+id/tv_modes_paiement" />

    <TextView
        android:id="@+id/tv_infos_bancaires"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_details"
        android:layout_marginTop="32dp"
        android:text="@string/informations_bancaires"
        android:textSize="@dimen/label_textSize_form"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_debit" />

    <EditText
        android:id="@+id/et_titulaire_compte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_details"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/titulaire_compte"
        android:inputType="textPersonName"
        android:textSize="@dimen/et_size_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_infos_bancaires" />

    <EditText
        android:id="@+id/et_num_compte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_details"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/numero_compte"
        android:textSize="@dimen/et_size_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_titulaire_compte" />

    <EditText
        android:id="@+id/et_cvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_details"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/cvv"
        android:inputType="number"
        android:textSize="@dimen/et_size_form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_num_compte" />

    <Button
        android:id="@+id/btn_retour_banque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart_details"
        android:layout_marginTop="60dp"
        android:onClick="goToPaiementAdressesFromPaiementBanque"
        android:text="@string/retour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cvv" />

    <Button
        android:id="@+id/btn_suivant_banque"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="41dp"
        android:background="@color/color_blue_info"
        android:onClick="goToPaiementValidationFromPaiementBanque"
        android:text="Suivant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_cvv" />

</androidx.constraintlayout.widget.ConstraintLayout>